Corrected issue for loading resources